<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>repox-system</artifactId>
		<groupId>repox</groupId>
		<version>2.5.0</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<name>REPOX-GUI</name>
	<artifactId>repox-gui</artifactId>
	<packaging>war</packaging>

	<organization>
		<name>Instituto Superior Técnico</name>
		<url>http://www.ist.utl.pt</url>
	</organization>

	<contributors>
		<contributor>
			<name>The European Library</name>
			<url>http://www.theeuropeanlibrary.org</url>
		</contributor>
	</contributors>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<warSourceDirectory>src/main/webapp</warSourceDirectory>
					<!-- <failOnMissingWebXml>false</failOnMissingWebXml> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<executions>
					<execution>
						<configuration>
							<style>OBFUSCATED</style>
							<extraJvmArgs>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</extraJvmArgs>
							<!--Can't disable these unneeded artifacts, so compile them outside 
								of the target WAR -->
							<deploy>${project.build.directory}/gwt-deploy</deploy>
						</configuration>
						<goals>
							<goal>compile</goal>
							<!--<goal>generateAsync</goal> -->
							<!--<goal>test</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>unpack-shared-resources</id>
						<goals>
							<goal>unpack-dependencies</goal>
						</goals>
						<phase>generate-resources</phase>
						<configuration>
							<!-- Use as much as needed to be specific or else it will unpack dependencies 
								that are not needed...also scope,type,classifier etc -->
							<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
							<includeArtifacIds>repox-resources</includeArtifacIds>
							<includeGroupIds>${project.groupId}</includeGroupIds>
							<includeClassifiers>resources</includeClassifiers>
							<includeTypes>zip</includeTypes>
							<excludeTransitive>true</excludeTransitive>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- The development profile is only used while development and what it 
			really does is copy the needed property files from the classes folder to 
			the default maven resources folder so it can be deployed in an IDE(ex. eclipse) 
			for testing -->
		<profile>
			<id>copy-resources</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>2.6</version>
						<executions>
							<execution>
								<id>copy-resources</id>
								<phase>process-resources</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>src/main/resources</outputDirectory>
									<resources>
										<resource>
											<directory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</directory>
											<filtering>true</filtering>
											<includes>
												<include>configuration.properties</include>
												<include>gui.properties</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Use the below profile to clean resources folder the copy-resources 
			was used before -->
		<profile>
			<id>production</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-clean-plugin</artifactId>
						<version>2.5</version>
						<configuration>
							<filesets>
								<fileset>
									<directory>src/main/resources</directory>
									<includes>
										<include>configuration.properties</include>
										<include>gui.properties</include>
									</includes>
									<followSymlinks>false</followSymlinks>
								</fileset>
							</filesets>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<!-- REPOX Core Libs -->
		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-manager</artifactId>
		</dependency>

		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-server-oai</artifactId>
			<type>war</type>
		</dependency>

		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-server-rest</artifactId>
			<type>war</type>
		</dependency>

		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-commons</artifactId>
		</dependency>

		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-resources</artifactId>
			<classifier>resources</classifier>
			<type>zip</type>
			<!-- Make sure this isn't included on any classpath -->
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>eu.europeana</groupId>
			<artifactId>definitions</artifactId>
		</dependency>

		<!--Ext GWT Libs -->
		<dependency>
			<groupId>gxt</groupId>
			<artifactId>gxt</artifactId>
			<classifier>gwt22</classifier>
		</dependency>

		<!--GWT Core Libs -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<exclusions>
				<exclusion>
					<groupId>commons-io</groupId>
					<artifactId>commons-io</artifactId>
				</exclusion>
			</exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<!--XML Parse Libs -->
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
		</dependency>
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
		</dependency>

		<!--Calendar Libs -->
		<dependency>
			<groupId>com.bradrydzewski</groupId>
			<artifactId>gwt-cal</artifactId>
		</dependency>
		<dependency>
			<groupId>com.allen-sauer.gwt.dnd</groupId>
			<artifactId>gwt-dnd</artifactId>
		</dependency>

		<!--Password Gen Lib -->
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
		</dependency>
		<!--RSS Lib -->
		<dependency>
			<groupId>rome</groupId>
			<artifactId>rome</artifactId>
		</dependency>

		<!-- LDAP Libs -->
		<dependency>
			<groupId>com.novell.ldap</groupId>
			<artifactId>jldap</artifactId>
		</dependency>

		<!-- Testing Libs -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<!-- This is a previous verrion <version>4.11</version> -->
		</dependency>

		<!--XMApper Libs -->
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>mdr-mapping-ui-svg</artifactId>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>mdr-system</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>jcl-over-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>xml-mapping-compiler</artifactId>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>xslt-om</artifactId>
		</dependency>
	</dependencies>
</project>